feat(api): add owner filter to resource search